Feed fixes on iOS (#2570)

--- a/themes/finna2/less/finna/feed.less
+++ b/themes/finna2/less/finna/feed.less
@@ -538,7 +538,9 @@ finna-feed {
             button {
                 font-size: 1em;
                 line-height: 0;
-                display: block;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 width: 5px;
                 height: 5px;
                 padding: 5px;
